Closed Bug 1487390 Opened 7 years ago Closed 7 years ago

Notify when a channel is aborted because of fastblocking

Categories

(Core :: Security, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: baku, Assigned: baku)

References

Details

Attachments

(1 file)

The notification could be nsIWebProgressListener::STATE_FAST_BLOCKED.
Attached patch fastBlock.patchSplinter Review
Attachment #9005191 - Flags: review?(ehsan)
Comment on attachment 9005191 [details] [diff] [review] fastBlock.patch Review of attachment 9005191 [details] [diff] [review]: ----------------------------------------------------------------- ::: uriloader/base/nsIWebProgressListener.idl @@ +315,5 @@ > const unsigned long STATE_COOKIES_BLOCKED_BY_PERMISSION = 0x10000000; > const unsigned long STATE_COOKIES_BLOCKED_TRACKER = 0x20000000; > const unsigned long STATE_COOKIES_BLOCKED_ALL = 0x40000000; > const unsigned long STATE_COOKIES_BLOCKED_FOREIGN = 0x80000000; > + const unsigned long STATE_FAST_BLOCKED = 0x00000040; This name doesn't read too well... How about calling it STATE_BLOCKED_SLOW_TRACKING_CONTENT (similar to STATE_BLOCKED_TRACKING_CONTENT)? Also can you add a comment right after STATE_LOADED_MIXED_ACTIVE_CONTENT saying 0x00000040 is used further down?
Attachment #9005191 - Flags: review?(ehsan) → review+
Blocks: 1487600
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/37133ece7ce2 Notify when a channel is aborted because of fastblocking, r=ehsan
Status: NEW → ASSIGNED
Priority: -- → P1
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: