Bug 1487390 - Notify when a channel is aborted because of fastblocking, r=ehsan